cabal-version:      2.4
name:               reminder
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: PR Reminders

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Alex B
maintainer:         best.alexander@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    readme.md

executable reminder
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0,
        bytestring,
        dotenv,
        lens,
        text,
        wreq,

    hs-source-dirs:   app
    default-language: Haskell2010
